[project]
name = "repo-money-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Ragazzi Amorim",email = "ragazzi@hotmail.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "repo_money_tracker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
